@@ -24,7 +24,12 @@ ChainHelper::Status ChainHelper::addFileList(TChain* chain, string fileListName)
     }
     string fileName;
     while(fileList >> fileName){
-      chain->Add(fileName.c_str());
+      //chain->Add(fileName.c_str());
+      // Add protection against file read errors
+      if(chain->Add(fileName.c_str(), -1)==0){
+        cerr << "ChainHelper ERROR adding file " << fileName << endl;
+        return BAD;
+      }
     }
     fileList.close();
   }
